# leonard

./: LICENSE  README.md  leonard.cabal
src/: Leonard.hs
