name:                leonard
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ratatosk/leonard#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Grafov
maintainer:          graphov@gmail.com
copyright:           Pavel Grafov
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Leonard
  build-depends:       base >= 4.7 && < 5
                     , primes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ratatosk/leonard
